fix: add wrap to tags to avoid layout breaks on mobile

--- a/src/components/Contact/Element.module.css
+++ b/src/components/Contact/Element.module.css
@@ -29,7 +29,6 @@
 
 .elementSelection {
   position: relative;
-  height: ;
   aspect-ratio: 1/1;
 }
 
