--- a/src/components/Projects/Window/Window.module.css
+++ b/src/components/Projects/Window/Window.module.css
@@ -18,8 +18,6 @@
 }
 
 .windowContentDetails {
-  width: 100%;
-  height: 100%;
   background: var(--p11);
   box-shadow: var(--button-3d-pushed);
   padding: 30px;
@@ -80,6 +78,7 @@
 
 .WCDTags {
   display: flex;
+  flex-wrap: wrap;
   gap: 10px;
 }
 
@@ -103,9 +102,10 @@
     overflow-x: auto;
 
     &::-webkit-scrollbar {
+      background: var(--n9);
       display: block;
       position: absolute;
-      width: 10px;
+      width: 20px;
     }
     &::-webkit-scrollbar-thumb {
       background: var(--n10);
@@ -115,10 +115,14 @@
       background-color: #00000000;
     }
     &::-webkit-scrollbar-button {
-      width: 9px;
       background: var(--n10);
       box-shadow: var(--button-3d-pulled);
     }
+    &::-webkit-scrollbar-button:horizontal:start:increment,
+    &::-webkit-scrollbar-button:horizontal:end:decrement {
+      display: none;
+    }
+
     & > * {
       min-width: 200px;
     }
